--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,10 +29,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('/assets/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
-       url('/assets/fonts/roboto/Roboto-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
+@import "~@fontsource/roboto/300.css";
+@import "~@fontsource/roboto/400.css";
+@import "~@fontsource/roboto/500.css";
+
+
