warehouse formatting modified

--- a/src/app/pages/warehouse/warehouse.component.html
+++ b/src/app/pages/warehouse/warehouse.component.html
@@ -20,7 +20,7 @@
     <mat-icon>edit</mat-icon>
     <span>Edit</span>
   </button>
-  <button mat-menu-item (click)="deleteWarehouse('warehouse.id')">
+  <button mat-menu-item (click)="deleteWarehouse(warehouse.id)">
     <mat-icon>delete</mat-icon>
     <span>Delete</span>
   </button>
