--- a/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
@@ -1,6 +1,6 @@
 <div class="flex gap-2 items-center justify-center">
-    <button mat-icon-button color="primary" class="cursor-pointer" (click)="edit()">
-      <mat-icon>edit</mat-icon>
+    <button mat-icon-button color="primary" class="cursor-pointer" (click)="view()">
+      <mat-icon>visibility</mat-icon>
     </button>
     <button mat-icon-button color="warn" class="cursor-pointer" (click)="delete()">
       <mat-icon>delete</mat-icon>
