--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -46,7 +46,7 @@
         </li>
       </ul>
     </nav>
-<a [routerLink]="['/Setting']" routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
+<a [routerLink]="['/setting']" routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
              class="flex items-center gap-3 px-10 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600">
             <mat-icon class="text-indigo-400 group-hover:text-indigo-600">settings</mat-icon>
             Settings
