--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -72,9 +72,30 @@
         (click)="toggleSidebar()">
         <mat-icon>menu</mat-icon>
       </button>
+      <div class="flex flex-col">
       <h2 class="text-2xl font-bold text-[#1F4C73] tracking-tight">
         {{ headerTitle }}
       </h2>
+    <nav class="text-sm text-gray-500 mt-1">
+          <ol class="flex items-center space-x-2">
+            <li
+              *ngFor="let crumb of breadcrumbs; let last = last"
+              class="flex items-center gap-2"
+            >
+              <a
+                *ngIf="!last"
+                [routerLink]="crumb.url"
+                class="hover:text-indigo-600"
+              >
+                {{ crumb.label }}
+              </a>
+              <span *ngIf="last" class="font-semibold text-gray-800">
+                {{ crumb.label }}
+              </span>
+              <span *ngIf="!last">/</span>
+            </li>
+          </ol>
+        </nav></div>
       <div class="w-10 h-10 bg-[#1F4C73] text-white rounded-full flex items-center justify-center font-bold shadow-md">
         CP
       </div>
