Purchase, Customer, Driver, User Permission applied

--- a/src/app/pages/dirver-details/dirver-details.component.html
+++ b/src/app/pages/dirver-details/dirver-details.component.html
@@ -11,6 +11,7 @@
       </span>
     </div>
     <button
+      *hasPermission="'driver:create'"
       mat-flat-button
       color="primary"
       cdkFocusInitial
