--- a/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
@@ -1,8 +1,13 @@
 <div class="flex gap-2 items-center justify-center">
-    <button mat-icon-button color="primary" class="cursor-pointer" (click)="view()">
-      <mat-icon>visibility</mat-icon>
-    </button>
-    <button mat-icon-button color="warn" class="cursor-pointer" (click)="delete()">
-      <mat-icon>delete</mat-icon>
-    </button>
-  </div>
+  @for (action of actions; track action.type) {
+    @if (action.permission) {
+      <button
+        mat-icon-button
+        [attr.aria-label]="(action.label || action.type) + ' action'"
+        (click)="onAction(action)"
+      >
+        <mat-icon>{{ action.icon }}</mat-icon>
+      </button>
+    }
+  }
+</div>
