--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -2,10 +2,10 @@
   <div class="text-sm text-gray-500 mb-2">
     <h1 class="text-xl font-bold text-gray-800 mb-6">User Management</h1>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3  ">
+    <div class="grid gap-6 grid-cols-[repeat(auto-fit,minmax(218px,1fr))]">
 
       <a [routerLink]="['cdetails']"
-        class="flex flex-col items-center justify-center bg-white w-50 h-45 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
+        class="flex flex-col items-center justify-center bg-white w-50 h-48 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
 
         <mat-icon class="text-indigo-500 text-60xl mb-3" style="font-size: 80px; width: 80px; height: 80px;">
           supervised_user_circle
@@ -14,7 +14,7 @@
 
       </a>
       <a [routerLink]="['dirvers']"
-        class="flex flex-col items-center justify-center bg-white w-50 h-45 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
+        class="flex flex-col items-center justify-center bg-white w-50 h-48 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
 
         <mat-icon class="text-indigo-500 mb-3" style="font-size: 80px; width: 80px; height: 80px;">
           local_shipping
@@ -22,9 +22,8 @@
         <span class="text-lg font-bold text-gray-700">Drivers</span>
       </a>
       @if(isAdmin) {
-        <a [routerLink]="['add-user']"
-          class="flex flex-col items-center justify-center bg-white w-50 h-45 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
-  
+        <a [routerLink]="['users-list']"
+          class="flex flex-col items-center justify-center bg-white w-50 h-48 rounded-xl p-6 border hover:shadow-lg hover:border-indigo-500 transition-all cursor-pointer">
           <mat-icon class="text-indigo-500 mb-3" style="font-size: 80px; width: 80px; height: 80px;">
             person_add
           </mat-icon>
