--- a/src/app/pages/warehouse/warehouse.component.html
+++ b/src/app/pages/warehouse/warehouse.component.html
@@ -17,6 +17,7 @@
           class="h-60 flex flex-col justify-between relative"
         >
           <mat-card-content>
+              <div class="absolute top-2 right-2" *ngIf="isAdmin">
             <div class="absolute top-2 right-2">
               <button mat-icon-button [matMenuTriggerFor]="menu">
                 <mat-icon>more_vert</mat-icon>
@@ -32,6 +33,7 @@
                   <span>Delete</span>
                 </button>
               </mat-menu>
+              </div>
             </div>
 
             <div class="flex flex-col h-full justify-between p-2 gap-1">
