when create user than show msg user and when admain than show the admain and aslo set the purches when update than title show the upadate and when add than show the add

--- a/src/app/pages/buy-stock/purchase-dialog/purchase-dialog.component.html
+++ b/src/app/pages/buy-stock/purchase-dialog/purchase-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 class="flex justify-center items-center text-3xl pt-8">
-  Add Purchase Detail
+  {{ dialogTitle }}
 </h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="purchaseForm" class="w-full">
