--- a/src/app/shared/components/summary-card/summary-card.component.html
+++ b/src/app/shared/components/summary-card/summary-card.component.html
@@ -7,6 +7,7 @@
     <button
       mat-stroked-button
       color="accent"
+      *hasPermission="permission"
       (click)="onEdit()"
       class="h-8 text-sm flex items-center gap-1 hover:bg-blue-100 cursor-pointer px-2 rounded-full"
     >
