replace email with username

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
     Jaji Trading Company
   </div>
   <form class="min-w-96 flex flex-col gap-4" (ngSubmit)="onLoginClicked()">
-    <!-- Email -->
+    <!-- User Name -->
     <mat-form-field class="w-full">
       <mat-label>Username</mat-label>
       <input
