--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,16 +1,13 @@
 <div class="flex h-screen w-full font-sans bg-[#f0f2f5] text-gray-800">
-  <!-- Sidebar -->
   <aside
     class="fixed left-0 top-0 flex flex-col bg-[#f5f7fa] h-screen z-50 transition-all duration-300"
     [ngClass]="{
-      'w-[260px]': sidebarExpanded,
-      'w-[80px]': !sidebarExpanded,
-      '-translate-x-full': !sidebarOpen && !isDesktop,
-      'translate-x-0': sidebarOpen || isDesktop
+      'w-[260px]': sidebarExpanded && isDesktop,
+      'w-[80px]': !sidebarExpanded || !isDesktop,
     }"
   >
     <div class="flex items-center justify-between h-18 px-4">
-      <button
+      <button *ngIf="isDesktop"
         (click)="toggleSidebarExpand()"
         class="text-gray-600 hover:text-blue-600 transition-all duration-200 flex flex-col items-center justify-center w-10 h-10"
       >
@@ -22,19 +19,11 @@
       </button>
 
       <h1
-        *ngIf="sidebarExpanded"
+        *ngIf="sidebarExpanded && isDesktop"
         class="text-2xl sm:text-3xl font-extrabold tracking-wide text-[#1F4C73]"
       >
         Coal Project
       </h1>
-
-      <button
-        *ngIf="!isDesktop"
-        (click)="toggleSidebar()"
-        class="text-3xl text-gray-600 hover:text-red-500 transition-colors duration-200 ml-2"
-      >
-        <mat-icon>close</mat-icon>
-      </button>
     </div>
 
     <nav class="flex-1 px-4 py-6 space-y-4">
@@ -91,20 +80,20 @@
         </li>
       </ul>
     </nav>
-
+ <div class="mt-auto px-4 space-y-2 pb-6 border-t border-gray-200">
     <a
       [routerLink]="['/setting']"
       routerLinkActive="bg-indigo-100 text-indigo-700"
-      class="flex items-center gap-3 px-4 py-3 rounded-xl hover:bg-indigo-50 hover:text-indigo-600 transition-all duration-200"
+      class="flex items-center gap-3 px-3 py-3 rounded-xl hover:bg-indigo-50 hover:text-indigo-600 transition-all duration-200"
     >
       <mat-icon>settings</mat-icon>
       <span *ngIf="sidebarExpanded">Settings</span>
     </a>
 
-    <div class="px-4 py-6 border-t border-gray-200">
+  
       <button
         (click)="logout()"
-        class="w-full flex items-center gap-3 text-red-500 hover:text-red-600 font-semibold transition cursor-pointer"
+        class="w-full flex items-center gap-3 px-3 py-3 text-red-500 hover:text-red-600 font-semibold transition cursor-pointer"
       >
         <mat-icon>logout</mat-icon>
         <span *ngIf="sidebarExpanded">Logout</span>
@@ -114,16 +103,9 @@
 
   <div
     class="flex flex-col flex-1 h-screen transition-all duration-300"
-    [ngStyle]="{ 'margin-left': sidebarExpanded && isDesktop ? '260px' : '80px' }"
+    [ngStyle]="{ 'margin-left':  isDesktop ? (sidebarExpanded ? '260px' : '80px') : '80px' }"
   >
     <header class="h-18 bg-[#f5f7fa] flex items-center justify-between px-6 md:px-8">
-      <button
-        class="md:hidden text-3xl text-gray-700 hover:text-blue-500 transition-colors duration-200"
-        (click)="toggleSidebar()"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-
       <div class="flex flex-col">
         <h2 class="text-2xl font-bold text-[#1F4C73] tracking-tight">
           {{ headerTitle }}
@@ -160,8 +142,3 @@
   </div>
 </div>
 
-<div
-  *ngIf="sidebarOpen && !isDesktop"
-  (click)="toggleSidebar()"
-  class="fixed inset-0 bg-black/40 z-40 md:hidden"
-></div>
