--- a/src/app/pages/buy-stock/buy-stock.component.html
+++ b/src/app/pages/buy-stock/buy-stock.component.html
@@ -16,8 +16,9 @@
     >
       Rate Entry
     </button>
-    } @if(!afghanGumrakData() ) {
-    <button
+    } @if(!gumrakData() ) {
+      <!-- TODO: Apply correct permissions -->
+      <button
       *hasPermission="'custom:create'"
       mat-flat-button
       color="primary"
@@ -56,14 +57,14 @@
     class="w-full"
     (edit)="openEditRateDialog(purchaseData().id!)"
   ></app-summary-card>
-  } @if(afghanGumrakData() ) {
+  } @if(gumrakData() ) {
   <app-summary-card
     title="Afghan Gumrak Detail"
-    [data]="afghanGumrakData()!"
-    imageKey="customImage"
+    [data]="gumrakData()!"
+    imageKey="gumrakImage"
     permission="custom:update"
     class="w-full"
-    (edit)="openAfghanGumrakDialog()"
+    (edit)="openEditGumrakDialog(purchaseData().id!)"
   ></app-summary-card>
   } @if(pakCustomData() ) {
   <app-summary-card
