--- a/src/app/pages/buy-stock/buy-stock.component.html
+++ b/src/app/pages/buy-stock/buy-stock.component.html
@@ -6,15 +6,15 @@
     Buy Stock
   </div>
   <div class="w-full my-8 px-2 flex flex-start gap-4">
-    @if(!purchaseRateData() ) {
+    @if(!purchaseFreightData() ) {
     <button
-      *hasPermission="'purchaseRate:create'"
+      *hasPermission="'purchaseFreight:create'"
       mat-flat-button
       color="primary"
       cdkFocusInitial
-      (click)="openRateDialog()"
+      (click)="openFreightDialog()"
     >
-      Rate Entry
+      Freight Entry
     </button>
     } @if(!gumrakData() ) {
       <!-- TODO: Apply correct permissions -->
@@ -23,7 +23,7 @@
       mat-flat-button
       color="primary"
       cdkFocusInitial
-      (click)="openAfghanGumrakDialog()"
+      (click)="openGumrakDialog()"
     >
       Afghan Gumrak Entry
     </button>
@@ -48,14 +48,14 @@
     class="w-full"
     (edit)="openEditPurchaseDialog(purchaseData().id!)"
   ></app-summary-card>
-  } @if(purchaseRateData() ) {
+  } @if(purchaseFreightData() ) {
   <app-summary-card
-    title="Rate Detail"
-    [data]="purchaseRateData()!"
+    title="Freight Detail"
+    [data]="purchaseFreightData()!"
     imageKey="builtyImage"
-    permission="purchaseRate:update"
+    permission="purchaseFreight:update"
     class="w-full"
-    (edit)="openEditRateDialog(purchaseData().id!)"
+    (edit)="openEditFreightDialog(purchaseData().id!)"
   ></app-summary-card>
   } @if(gumrakData() ) {
   <app-summary-card
