Rate changed to Freight

--- a/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
+++ b/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
@@ -1,6 +1,6 @@
-<h2 class="flex justify-center items-center text-3xl pt-8">Add Rate Detail</h2>
+<h2 class="flex justify-center items-center text-3xl pt-8">Add Freight Detail</h2>
 <mat-dialog-content class="mat-typography">
-  <form [formGroup]="rateForm">
+  <form [formGroup]="freightForm">
     <div
       class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 gap-y-3 w-full place-items-center my-12"
     >
