remove the extra feild and add which is required and name ching

--- a/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
+++ b/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
@@ -29,16 +29,8 @@
         <input matInput formControlName="advancePayment" />
       </mat-form-field>
       <mat-form-field class="w-[80%]">
-        <mat-label>Enter Amount (Afghanistan)</mat-label>
-        <input matInput formControlName="amountAFN" />
-      </mat-form-field>
-      <mat-form-field class="w-[80%]">
-        <mat-label>Enter Exchange Rate</mat-label>
-        <input matInput formControlName="exchangeRate" />
-      </mat-form-field>
-      <mat-form-field class="w-[80%]">
-        <mat-label>Amount (PKR)</mat-label>
-        <input matInput formControlName="amountPKR" readonly/>
+        <mat-label>Total Amount</mat-label>
+        <input matInput formControlName="totalAmount" readonly/>
       </mat-form-field>
 
     </div>
