--- a/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
+++ b/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
@@ -48,27 +48,27 @@
       
       <mat-form-field class="w-80">
         <mat-label>
-          {{ "Enter the Invoice No." }}
+          {{ "Enter the invoice Expense." }}
         </mat-label>
-        <input matInput formControlName="invoice" />
+        <input matInput formControlName="invoiceExpense" />
       </mat-form-field>
       <mat-form-field class="w-80">
         <mat-label>
-          {{ "Enter Spent Afghan" }}
+          {{ "Enter other Expense" }}
         </mat-label>
-        <input matInput formControlName="spendAfg" />
+        <input matInput formControlName="otherExpense" />
       </mat-form-field>
       <mat-form-field class="w-80">
         <mat-label>
-          {{ "Enter the Product" }}
+          {{ "Enter the afghan Tax" }}
         </mat-label>
-        <input matInput formControlName="product" />
+        <input matInput formControlName="afghanTax" />
       </mat-form-field>
       <mat-form-field class="w-80">
         <mat-label>
-          {{ "Enter SH Tax" }}
+          {{ "Enter  commission" }}
         </mat-label>
-        <input matInput formControlName="shTax" />
+        <input matInput formControlName=" commission" />
       </mat-form-field>
       <mat-form-field class="w-80">
         <mat-label>
