--- a/src/app/pages/buy-stock/purchase-dialog/purchase-dialog.component.html
+++ b/src/app/pages/buy-stock/purchase-dialog/purchase-dialog.component.html
@@ -83,6 +83,19 @@
           <mat-label>Enter Metric Ton</mat-label>
           <input matInput formControlName="metricTon" />
         </mat-form-field>
+          <mat-form-field class="w-[80%]">
+          <mat-label>Enter coalType</mat-label>
+          <input matInput formControlName="" />
+        </mat-form-field>
+             <mat-form-field class="w-[80%]">
+          <mat-label>Enter ratePerTon</mat-label>
+          <input matInput formControlName="ratePerTon" />
+        </mat-form-field>
+             <mat-form-field class="w-[80%]">
+          <mat-label>Enter totalAmount</mat-label>
+          <input matInput formControlName="" />
+        </mat-form-field>
+        
         <div class="w-[80%] h-48 relative">
           <!-- Hidden file input -->
           <input
