--- a/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
+++ b/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
@@ -30,7 +30,7 @@
       </mat-form-field>
       <mat-form-field class="w-[80%]">
         <mat-label>Total Amount</mat-label>
-        <input matInput formControlName="totalAmount" readonly/>
+        <input matInput formControlName="totalFreightAmount" readonly/>
       </mat-form-field>
 
     </div>
