--- a/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
+++ b/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
@@ -31,7 +31,7 @@
         </mat-datepicker-toggle>
         <mat-datepicker #pickerEnglish></mat-datepicker>
       </mat-form-field>
-      
+
       <mat-form-field class="w-80">
         <mat-label>Choose an Islamic date</mat-label>
         <input
@@ -45,7 +45,7 @@
         </mat-datepicker-toggle>
         <mat-datepicker #pickerIslamic></mat-datepicker>
       </mat-form-field>
-      
+
       <mat-form-field class="w-80">
         <mat-label>
           {{ "Enter the invoice Expense." }}
@@ -74,7 +74,7 @@
         <mat-label>
           {{ "Total Amount" }}
         </mat-label>
-        <input matInput formControlName="totalAmount" />
+        <input matInput formControlName="totalGumrakAmount" />
       </mat-form-field>
       <div class="w-80 h-44 relative">
         <input
