--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -44,6 +44,17 @@
           </a>
         </li>
         <li>
+          <button
+            mat-flat-button
+            color="primary"
+            class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600 transition-transform hover:scale-105 w-full text-left"
+            (click)="openExchangeDialog()"
+          >
+            <mat-icon class="text-indigo-400 group-hover:text-indigo-600">currency_exchange</mat-icon>
+            Exchange Rate
+          </button>
+        </li>
+        <li>
           <a [routerLink]="['/expenses']" routerLinkActive="bg-indigo-100 text-indigo-700 font-semibold"
             class="flex items-center gap-3 px-4 py-3 rounded-xl transition-all duration-200 hover:bg-indigo-50 hover:text-indigo-600">
             <mat-icon class="text-indigo-400 group-hover:text-indigo-600">receipt_long</mat-icon>
