Temp Ex. Rate added

--- a/src/app/pages/exchange-rate/exchange-rate-dialog/exchange-rate-dialog.component.html
+++ b/src/app/pages/exchange-rate/exchange-rate-dialog/exchange-rate-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 class="flex justify-center items-center text-3xl pt-8">
-  Permanent Rate Exchange
+  Permanent Exchange Rate
 </h2>
 
 <mat-dialog-content class="mat-typography p-0">
