TotalPurchase calculated on basis of temp rate

--- a/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-2 items-center justify-center">
+<div class="flex gap-2 items-center justify-end">
   @for (action of actions; track action.type) {
     @if (action.permission) {
       <button
