--- a/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/shared/components/action-cell-renderer/action-cell-renderer.component.html
@@ -1,13 +1,19 @@
 <div class="flex gap-2 items-center justify-center">
+    <button
+    mat-icon-button
+    [matMenuTriggerFor]="actionMenu"
+    aria-label="More actions"
+  >
+    <mat-icon>more_vert</mat-icon>
+  </button>
+ <mat-menu #actionMenu="matMenu">
   @for (action of actions; track action.type) {
-    @if (action.permission) {
-      <button
-        mat-icon-button
-        [attr.aria-label]="(action.label || action.type) + ' action'"
-        (click)="onAction(action)"
-      >
-        <mat-icon>{{ action.icon }}</mat-icon>
-      </button>
-    }
+  <button
+    mat-menu-item
+    (click)="onAction(action)">
+    <mat-icon>{{ action.icon }}</mat-icon>
+    <span>{{ action.label || action.type }}</span>
+  </button>
   }
+   </mat-menu>
 </div>
