--- a/src/app/pages/warehouse/warehouse.component.html
+++ b/src/app/pages/warehouse/warehouse.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full justify-center items-center mx-16 mt-5 mb-2">
+<div class="flex flex-col h-full justify-center items-center">
   <div class="w-full bg-[#216B96] text-white p-5 text-2xl font-semibold">
     Warehouses
   </div>
