--- a/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
+++ b/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
@@ -1,9 +1,8 @@
-<h2 class="flex justify-center items-center text-3xl pt-8">Add Freight Detail</h2>
+<h2 class="flex justify-center items-center text-3xl pt-8">{{ isEdit ? 'Edit Freight Detail' : 'Add Freight Detail' }}
+</h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="freightForm">
-    <div
-      class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 gap-y-3 w-full place-items-center my-12"
-    >
+    <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-2 gap-y-3 w-full place-items-center my-12">
       <mat-form-field class="w-[80%]">
         <mat-label>Truck Number</mat-label>
         <input matInput formControlName="truckNo" />
@@ -30,13 +29,13 @@
       </mat-form-field>
       <mat-form-field class="w-[80%]">
         <mat-label>Total Amount</mat-label>
-        <input matInput formControlName="totalFreightAmount" readonly/>
+        <input matInput formControlName="totalFreightAmount" readonly />
       </mat-form-field>
 
     </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button matButton="outlined" mat-dialog-close>Cancel</button>
-    <button matButton="filled" cdkFocusInitial (click)="onSave()">Save</button>
-  </mat-dialog-actions>
+  <button matButton="outlined" mat-dialog-close>Cancel</button>
+  <button matButton="filled" cdkFocusInitial (click)="onSave()">Save</button>
+</mat-dialog-actions>
