--- a/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
+++ b/src/app/pages/buy-stock/gumrak-form/gumrak-form.component.html
@@ -1,5 +1,5 @@
 <h2 class="flex justify-center items-center text-3xl pt-8">
-  {{ "Afghan Gumrak Form" }}
+  {{ isEdit ? 'Edit Gumrak Entry' : 'Add Gumrak Entry'   }}
 </h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="gumrakForm">
