--- a/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
+++ b/src/app/pages/buy-stock/freight-dialog/freight-dialog.component.html
@@ -1,4 +1,6 @@
-<h2 class="flex justify-center items-center text-3xl pt-8">Add Freight Detail</h2>
+<h2 class="flex justify-center items-center text-3xl pt-8">
+  {{ isEdit ? 'Update Freight Detail' : 'Add Freight Detail' }}
+</h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="freightForm">
     <div
@@ -38,5 +40,7 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button matButton="outlined" mat-dialog-close>Cancel</button>
-    <button matButton="filled" cdkFocusInitial (click)="onSave()">Save</button>
+    <button matButton="filled" cdkFocusInitial (click)="onSave()">
+      {{ isEdit ? 'Update' : 'Save' }}
+    </button>
   </mat-dialog-actions>
